--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PersonaBook">
         <activity
+            android:name=".AddPersonaActivity"
+            android:exported="false" />
+        <activity
             android:name=".PersonalityTypeActivity"
             android:exported="false"
             android:label="@string/title_activity_personality_type"
